# brewhouse

./: LICENSE  README.md
kettle_control/: README.md
kettle_control/modelling/: README.md  modelling.txt  serial_logger.cc
winch_control/: CMakeLists.txt  Makefile  README.MD  SimulatedGrainfather.cc  SimulatedGrainfather.h  brew_session.cc  brew_session.h  brew_session_test.cc  brew_types.cc  brew_types.h  brew_types_test.cc  brewhub.cc  brewmanager.h  brewtweeter.h  export_gpio.sh  fake_scale.h  fake_scale_test.cc  gpio.cc  gpio.h  grainfather.h  grainfather2.cc  grainfather2.h  grainfather_test.cc  logger.cc  logger.h  manual_tests.cc  physical_tests.cc  raw_scale.cc  raw_scale.h  relay.h  relay_test.cc  scale.cc  scale.h  scale_alarm_test.cc  scale_filter.cc  scale_filter.h  scale_filter_test.cc  scale_test.cc  serial_test.cc  sheets_test.cc  (+6 more)
winch_control/unused/: brewhub.cc  brewmanager.h  grainfather.h  winch.cc  winch.h
